--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm",
     "migration:run": "npm run typeorm migration:run -- -d dist/data-source",
-    "migration:revert": "npm run typeorm migration:revert -- -d dist/data-source"
+    "migration:revert": "npm run typeorm migration:revert -- -d dist/data-source",
+    "migration:create": "npm run typeorm migration:create"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
