Create base structure for cards module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@users/*": ["src/users/*"],
       "@dashboards/*": ["src/dashboards/*"],
       "@common/*": ["src/common/*"],
+      "@cards/*": ["src/cards/*"],
     }
   }
 }
